<resources>
    <string name="app_name">FamilyFlow</string>
    <string name="benutzername">E-Mail-Adresse</string>
    <string name="buttonLogin">Anmelden</string>
    <string name="buttonRegistrieren">Konto erstellen</string>
    <string name="fehlermeldungLogin">Ungültige EIngabe: E-Mail-Adresse oder Passwort ist falsch</string>
    <string name="passwort">Passwort</string>
    <string name="passwortVergessen">Passwort vergessen</string>
    <string name="loginFunktioniert">Der Login funktioniert</string>
    <string name="logo_beschreibung">App-Logo</string>
    <string name="stringTextKontoErstellen">Wenn Sie noch kein Konto haben, erstellen Sie eines.</string>
    <string name="ueberschriftLogin">Sign in</string>
    <string name="zurueck">zurück</string>
    <string name="details_zur_aufgabe">Details zur Aufgabe</string>
    <string name="details_hier_einf_gen">Details hier einfügen...</string>
    <string name="bearbeiten">Bearbeiten</string>
    <string name="suche_nach_aufgaben">Suche nach Aufgaben</string>
    <string name="sortieren_nach_datum">Sortieren nach Datum</string>
    <string name="sortieren_alphabetisch">Sortieren alphabetisch</string>
    <string name="aufgabenbezeichnung">Aufgabenbezeichnung</string>
    <string name="status">Status</string>
    <string name="f_lligkeitsdatum">Fälligkeitsdatum</string>
    <string name="notiz">Notiz</string>
    <string name="speichern">Speichern</string>
    <string name="personen_ausw_hlen">Personen auswählen:</string>
    <string name="hinzuf_gen">Hinzufügen</string>
    <string name="person_speichern">Speichern</string>
    <string name="aufgaben">Aufgaben</string>
    <string name="listen">Listen</string>
    <string name="termine">Termine</string>
    <string name="family_title">The Family</string>
    <string name="navigation_person">Person</string>
    <string name="navigation_settings">Einstellungen</string>
    <string name="navigation_bell">Benachrichtigungen</string>
    <string name="navigation_calendar">Kalender</string>
    <string name="navigation_chat">Chat</string>
    <string name="kontakte">Kontakte</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="benachrichtigungen">Benachrichtigungen</string>
    <string name="kalender">Kalender</string>
    <string name="chat">Chat</string>
    <string name="element_hinzufuegen">Element hinzufügen</string>
    <string name="teilnehmer_des_termins">Teilnehmer des Termins</string>
    <string name="hintergrund">Hintergrund</string>
    <string name="search_hint" />
    <string name="sort_by_date" />
    <string name="sort_by_name" />
    <string name="neuen_termin_erstellen" />
    <string name="titel_eingeben" />
    <string name="termin_datum" />
    <string name="datum_waehlen" />
    <string name="startzeit" />
    <string name="endzeit" />
    <string name="notizen_hinzufuegen" />
    <string name="zuweisen" />
    <string name="details_zum_termin">Details zum Termin</string>
    <string name="suche_nach_terminen">Suche nach Termine</string>
    <string name="terminbezeichnung">Terminbezeichnung</string>
    <string name="zurueckPinnwand">Zurück</string>
    <string name="aufgabeErstellen">Aufgabe erstellen</string>
    <string name="abbruchAufgabeUebersicht">Abbrechen</string>
    <string name="aufgabeDetails">Aufgabe speichern</string>
    <string name="zurueckAufgabeUebersicht">Übersicht</string>
    <string name="aufgabeBearbeiten">Bearbeiten</string>
    <string name="person">Person\n</string>
    <string name="personenZuweisen">Person auswählen:</string>
    <string name="zurueckTerminUebersicht">Übersicht</string>
    <string name="terminBearbeiten">Bearbeiten</string>
    <string name="terminErstellen">Termin erstellen</string>
    <string name="terminDetails">Termin speichern</string>
    <string name="settings_title">Einstellungen</string>
    <string name="sound_settings">Ton anpassen</string>
    <string name="brightness_settings">Helligkeit</string>
    <string name="layout_settings">Layout</string>
    <string name="manage_roles">Rollen verwalten</string>
    <string name="leave_group">Gruppe verlassen</string>
    <string name="delete_account">Konto löschen</string>
    <string name="manage_subscription">Abo verwalten</string>
    <string name="logout">Ausloggen</string>
    <string name="loeschen">Löschen</string>
    <string name="aufgabenbezeichnung_hint">Aufgabenbezeichnung bearbeiten</string>
    <string name="terminname">Terminname</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="datum">Datum</string>
    <string name="terminname_hint">Terminname</string>
    <string name="uhrzeit">Uhrzeit</string>
    <string name="wiederholung">Wiederholung</string>
    <string name="event_title_placeholder">Event Title</string>
    <string name="event_time_placeholder">Event Time</string>
</resources>