<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Aufgabenbezeichnung -->
    <EditText
        android:id="@+id/editTextAufgabenbezeichnung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/aufgabenbezeichnung"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <!-- Status -->
    <EditText
        android:id="@+id/editTextStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/status"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextAufgabenbezeichnung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <!-- Faelligkeitsdatum -->
    <EditText
        android:id="@+id/editTextFaelligkeitsdatum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/f_lligkeitsdatum"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <!-- Noziz -->
    <EditText
        android:id="@+id/editTextNotiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/notiz"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextFaelligkeitsdatum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <!-- Speichern-Button -->
    <Button
        android:id="@+id/buttonAufgabeSpeichern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speichern"
        app:layout_constraintTop_toBottomOf="@id/editTextNotiz"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Löschen-Button -->
    <Button
        android:id="@+id/buttonAufgabeLoeschen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loeschen"
        app:layout_constraintTop_toBottomOf="@id/buttonAufgabeSpeichern"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
