<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/aufgabenbezeichnung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/aufgabenbezeichnung"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintMargin="16dp" />

    <EditText
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/status"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/aufgabenbezeichnung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintMarginTop="16dp" />

    <EditText
        android:id="@+id/faelligkeitsdatum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/f_lligkeitsdatum"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintMarginTop="16dp" />

    <EditText
        android:id="@+id/notiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/notiz"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/faelligkeitsdatum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintMarginTop="16dp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/speichern"
        app:layout_constraintTop_toBottomOf="@id/notiz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintMarginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
