<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- EditText für den Terminname -->
    <EditText
        android:id="@+id/editTextTerminname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/terminname_hint"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- EditText für das Datum -->
    <EditText
        android:id="@+id/editTextDatum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/datum"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/editTextTerminname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- EditText für die Uhrzeit -->
    <EditText
        android:id="@+id/editTextUhrzeit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/uhrzeit"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextDatum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- EditText für die Wiederholung -->
    <EditText
        android:id="@+id/editTextWiederholung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/wiederholung"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextUhrzeit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- EditText für die Beschreibung (Status) -->
    <EditText
        android:id="@+id/editTextBeschreibung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/beschreibung"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextWiederholung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Spinner für die Auswahl des Benutzers -->
    <Spinner
        android:id="@+id/spinnerBenutzer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextBeschreibung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:spinnerMode="dropdown" />

    <!-- Button zum Speichern des Termins -->
    <Button
        android:id="@+id/buttonTerminSpeichern"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/speichern"
        app:layout_constraintTop_toBottomOf="@id/spinnerBenutzer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/brown1"
        android:layout_marginTop="16dp" />

    <!-- MaterialButton für den Zurück-Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonZurueck"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/brown1"
        android:text="@string/zurueckPinnwand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTerminSpeichern"
        app:layout_constraintVertical_bias="0.981" />

</androidx.constraintlayout.widget.ConstraintLayout>
