<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Terminname -->
    <EditText
        android:id="@+id/editTextTerminname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/terminname"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <!-- Datum -->
    <EditText
        android:id="@+id/editTextDatum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/datum"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextTerminname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <!-- Uhrzeit -->
    <EditText
        android:id="@+id/editTextUhrzeit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/uhrzeit"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextDatum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <!-- Wiederholung -->
    <EditText
        android:id="@+id/editTextWiederholung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/wiederholung"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextUhrzeit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <!-- Beschreibung -->
    <EditText
        android:id="@+id/editTextBeschreibung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/beschreibung"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextWiederholung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <Spinner
        android:id="@+id/spinnerBenutzer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextBeschreibung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:id="@+id/bottomNavigation"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <!-- Speichern-Button -->
    <Button
        android:id="@+id/buttonTerminSpeichern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speichern"
        android:backgroundTint="@color/brown1"
        app:layout_constraintTop_toBottomOf="@id/editTextBeschreibung"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Löschen-Button -->
    <Button
        android:id="@+id/buttonTerminLoeschen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loeschen"
        android:backgroundTint="@color/brown1"
        app:layout_constraintTop_toBottomOf="@id/buttonTerminSpeichern"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
